--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -14,6 +14,10 @@ on:
 jobs:
   build-windows:
     runs-on: windows-latest
+    permissions:
+      contents: write  # This is crucial for creating releases
+      actions: read
+      checks: write
     
     steps:
     - name: Checkout code
